--- a/templates/merchandise.html
+++ b/templates/merchandise.html
@@ -29,7 +29,7 @@
                 <div class="room__card">
                     <div class="img">
                         <a href="../static/assets/img/product/{{item.gambar}}" class="icon image-popup d-flex justify-content-center align-items-center">
-                            <img src="../static/assets/img/product/{{item.gambar}}" class="block-20" alt="Colorlib Template" style="height: 450px;">
+                            <img src="../static/assets/img/product/{{item.gambar}}" class="block-20" alt="Image" style="height: 450px;">
                         </a>
                     </div>
                     <div class="room__card__details">
