--- a/templates/header.html
+++ b/templates/header.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="../static/assets/css/flaticon.css">
     <link rel="stylesheet" href="../static/assets/css/icomoon.css">
     <link rel="stylesheet" href="../static/assets/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+
     <style>
       .user-icon {
           position: fixed;
@@ -75,11 +77,63 @@
 	      </div>
 	    </div>
       <div id="logout-popup">
-        <p>Anda yakin ingin logout?</p>
-        <button id="logout-btn">Logout</button>
-        <button id="cancel-btn">Cancel</button>
+        <button id="edit-profile-btn" class="btn btn-primary btn-small w-100" data-toggle="modal" data-target="#edit-profile-modal">Setting Profil</button>
+        <div class="row justify-content-center">
+          <p>Anda yakin ingin logout?</p>
+          <button id="logout-btn">Logout</button>
+          <button id="cancel-btn">Cancel</button>
+        </div>
       </div>
 	</nav>
+  
+  <!-- Modal for Edit Profile -->
+  <div class="modal fade" id="edit-profile-modal" tabindex="-1" role="dialog" aria-labelledby="eedit-profile-modalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="edit-profile-modalLabel">Edit Profile</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form id="editProfileForm" method="post" enctype="multipart/form-data">
+            <input type="hidden" id="id" name="_id" value="{{ session['_id'] }}">
+            <div class="form-group">
+              <label for="username">Username</label>
+              <input type="text" class="form-control" id="username" name="username" value="{{ session['username'] }}" required>
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="email" class="form-control" id="email" name="email" value="{{ session['email'] }}" required>
+            </div>
+            <div class="form-group">
+              <label for="profile_pic">Foto Profil (Hanya image .png, .jpeg dan .jpg)</label>
+              <img id="gambar-preview" src="../static/assets/img/profile_pics/{{ session['profile_pic_real'] }}" alt="" width="200">
+              <input type="file" class="form-control" accept=".png,.jpg,.jpeg" name="profile_pic" id="profile_pic"
+                    style="border-radius: 13px;" placeholder="Enter the Image" onchange="previewImage(event)" />
+            </div>
+            <hr>
+            <button type="button" class="btn btn-secondary" id="edit-password-btn">Edit Password</button>
+            <div id="password-fields" style="display: none;">
+              <div class="form-group">
+                <input type="password" class="form-control" id="current_password" name="current_password" value="{{ session['password'] }}" hidden>
+              </div>
+              <div class="form-group">
+                <label for="new_password">Password Baru</label>
+                <input type="password" class="form-control" id="new_password" name="new_password">
+              </div>
+              <div class="form-group">
+                <label for="confirm_password">Konfirmasi Password Baru</label>
+                <input type="password" class="form-control" id="confirm_password" name="confirm_password">
+              </div>
+            </div>
+            <button type="button" class="btn btn-primary" onclick="confirmEdit()">Submit</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
   
   <script>
     document.addEventListener("DOMContentLoaded", function () {
@@ -92,7 +146,74 @@
       });
 
       document.getElementById("logout-btn").addEventListener("click", function () {
-        window.location.href = "/";
+        Swal.fire({
+          title: 'Anda yakin ingin logout?',
+          text: "Anda akan diarahkan ke halaman utama.",
+          icon: 'warning',
+          showCancelButton: true,
+          confirmButtonColor: '#3085d6',
+          cancelButtonColor: '#d33',
+          confirmButtonText: 'Ya, logout!',
+          cancelButtonText: 'Batal'
+        }).then((result) => {
+          if (result.isConfirmed) {
+            window.location.href = "/";
+          }
+        });
       });
     });
+
+    var editPasswordBtn = document.getElementById('edit-password-btn');
+    var passwordFields = document.getElementById('password-fields');
+
+    editPasswordBtn.addEventListener('click', function() {
+        if (passwordFields.style.display === 'none') {
+            passwordFields.style.display = 'block';
+        } else {
+            passwordFields.style.display = 'none';
+        }
+    });
+
+    function confirmEdit() {
+      Swal.fire({
+        title: 'Apakah Anda yakin?',
+        text: 'Menyimpan perubahan ini!',
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonText: 'Ya',
+        cancelButtonText: 'Tidak'
+      }).then((result) => {
+        if (result.isConfirmed) {
+          const formData = new FormData(document.getElementById('editProfileForm'));
+          $.ajax({
+            url: '/profile/' + $('#id').val(),
+            type: 'POST',
+            data: formData,
+            processData: false,
+            contentType: false,
+            success: function (response) {
+              Swal.fire(
+                'Berhasil!',
+                'Profil Anda telah diperbarui.',
+                'success'
+              ).then(() => {
+                $('#edit-profile-modal').modal('hide'); 
+                window.location.reload(); 
+              });
+            },
+            error: function (xhr, status, error) {
+              Swal.fire(
+                'Gagal!',
+                'Profil Anda tidak dapat diperbarui.',
+                'error'
+              ).then(() => {
+                $('#edit-profile-modal').modal('hide'); 
+                window.location.reload(); 
+              });
+            }
+          });
+        }
+      });
+    }
+    
   </script>
