--- a/templates/user.html
+++ b/templates/user.html
@@ -24,6 +24,34 @@
     <link rel="stylesheet" href="../static/assets/css/icomoon.css">
     <link rel="stylesheet" href="../static/assets/css/style.css">
     <link rel="stylesheet" href="../static/assets/css/style-gallery.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+
+    <style>
+      .user-icon {
+          position: fixed;
+          top: 10px;
+          right: 10px;
+          cursor: pointer;
+      }
+      .user-icon img {
+          width: 40px;
+          height: 40px;
+      }
+
+      #user-account .login-text {
+          display: none;
+      }
+      @media (max-width: 650px) {
+          #user-account .fas.fa-user {
+              display: none;
+          }
+
+          #user-account .login-text {
+              display: inline;
+              color: white; 
+          }
+      }
+    </style>
   </head>
   <body>
 	  
@@ -48,11 +76,63 @@
 	      </div>
 	    </div>
       <div id="logout-popup">
-        <p>Anda yakin ingin logout?</p>
-        <button id="logout-btn">Logout</button>
-        <button id="cancel-btn">Cancel</button>
+        <button id="edit-profile-btn" class="btn btn-primary btn-small w-100" data-toggle="modal" data-target="#edit-profile-modal">Setting Profil</button>
+        <div class="row justify-content-center">
+          <p>Anda yakin ingin logout?</p>
+          <button id="logout-btn">Logout</button>
+          <button id="cancel-btn">Cancel</button>
+        </div>
       </div>
 	</nav>
+
+  <!-- Modal for Edit Profile -->
+  <div class="modal fade" id="edit-profile-modal" tabindex="-1" role="dialog" aria-labelledby="eedit-profile-modalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="edit-profile-modalLabel">Edit Profile</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form id="editProfileForm" method="post" enctype="multipart/form-data">
+            <input type="hidden" id="id" name="_id" value="{{ session['_id'] }}">
+            <div class="form-group">
+              <label for="username">Username</label>
+              <input type="text" class="form-control" id="username" name="username" value="{{ session['username'] }}" required readonly>
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="email" class="form-control" id="email" name="email" value="{{ session['email'] }}" required>
+            </div>
+            <div class="form-group">
+              <label for="profile_pic">Foto Profil (Hanya image .png, .jpeg dan .jpg)</label>
+              <img id="gambar-preview" src="../static/assets/img/profile_pics/{{ session['profile_pic_real'] }}" alt="" width="200">
+              <input type="file" class="form-control" accept=".png,.jpg,.jpeg" name="profile_pic" id="profile_pic"
+                    style="border-radius: 13px;" placeholder="Enter the Image" onchange="previewImage(event)" />
+            </div>
+            <hr>
+            <button type="button" class="btn btn-secondary" id="edit-password-btn">Edit Password</button>
+            <div id="password-fields" style="display: none;">
+              <div class="form-group">
+                <input type="password" class="form-control" id="current_password" name="current_password" value="{{ session['password'] }}" hidden>
+              </div>
+              <div class="form-group">
+                <label for="new_password">Password Baru</label>
+                <input type="password" class="form-control" id="new_password" name="new_password">
+              </div>
+              <div class="form-group">
+                <label for="confirm_password">Konfirmasi Password Baru</label>
+                <input type="password" class="form-control" id="confirm_password" name="confirm_password">
+              </div>
+            </div>
+            <button type="button" class="btn btn-primary" onclick="confirmEdit()">Submit</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
   
   <script>
     document.addEventListener("DOMContentLoaded", function () {
@@ -65,9 +145,75 @@
       });
 
       document.getElementById("logout-btn").addEventListener("click", function () {
-        window.location.href = "/";
+        Swal.fire({
+          title: 'Anda yakin ingin logout?',
+          text: "Anda akan diarahkan ke halaman utama.",
+          icon: 'warning',
+          showCancelButton: true,
+          confirmButtonColor: '#3085d6',
+          cancelButtonColor: '#d33',
+          confirmButtonText: 'Ya, logout!',
+          cancelButtonText: 'Batal'
+        }).then((result) => {
+          if (result.isConfirmed) {
+            window.location.href = "/";
+          }
+        });
       });
     });
+
+    var editPasswordBtn = document.getElementById('edit-password-btn');
+    var passwordFields = document.getElementById('password-fields');
+
+    editPasswordBtn.addEventListener('click', function() {
+        if (passwordFields.style.display === 'none') {
+            passwordFields.style.display = 'block';
+        } else {
+            passwordFields.style.display = 'none';
+        }
+    });
+
+    function confirmEdit() {
+      Swal.fire({
+        title: 'Apakah Anda yakin?',
+        text: 'Menyimpan perubahan ini!',
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonText: 'Ya',
+        cancelButtonText: 'Tidak'
+      }).then((result) => {
+        if (result.isConfirmed) {
+          const formData = new FormData(document.getElementById('editProfileForm'));
+          $.ajax({
+            url: '/profile/' + $('#id').val(),
+            type: 'POST',
+            data: formData,
+            processData: false,
+            contentType: false,
+            success: function (response) {
+              Swal.fire(
+                'Berhasil!',
+                'Profil Anda telah diperbarui.',
+                'success'
+              ).then(() => {
+                $('#edit-profile-modal').modal('hide'); 
+                window.location.reload(); 
+              });
+            },
+            error: function (xhr, status, error) {
+              Swal.fire(
+                'Gagal!',
+                'Profil Anda tidak dapat diperbarui.',
+                'error'
+              ).then(() => {
+                $('#edit-profile-modal').modal('hide'); 
+                window.location.reload(); 
+              });
+            }
+          });
+        }
+      });
+    }
   </script>
 
 <section class="ftco-section bg-light" data-section="users">
@@ -92,7 +238,7 @@
                             <th class="border-0 rounded-end text-center">Aksi</th>
                         </tr>
                         </thead>
-                        {% for item in user %}
+                        {% for item in users %}
                         <tr>
                         <td style="color: black;">{{loop.index}}</td>
                         <td style="color: black;">{{ item.username }}</td>
@@ -100,7 +246,7 @@
 
                         <td class="text-center">
                             
-                            <a href="/deleteUser/{{item._id}}">
+                            <a href="#" onclick="confirmDelete('{{ item._id }}')">
                             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25" viewBox="0 0 172 172"
                                 style=" fill:#7d1710;">
                                 <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
@@ -152,6 +298,46 @@
     </div>
 </section>
 
+<script>
+  function confirmDelete(itemId) {
+    Swal.fire({
+      title: "Apakah Anda yakin?",
+      text: "Anda tidak akan bisa mengembalikan ini!",
+      icon: "warning",
+      showCancelButton: true,
+      confirmButtonColor: "#3085d6",
+      cancelButtonColor: "#d33",
+      confirmButtonText: "Ya, hapus!"
+    }).then((result) => {
+      if (result.isConfirmed) {
+        fetch(`/deleteUser/${itemId}`, {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json'
+            },
+          })
+          .then(response => {
+            if (response.ok) {
+              Swal.fire({
+                title: "Terhapus!",
+                text: "Data user Anda telah dihapus.",
+                icon: "success"
+              }).then(() => {
+                window.location.reload();
+              });
+            } else {
+              Swal.fire({
+                title: "Gagal!",
+                text: "Data user Anda tidak dapat dihapus.",
+                icon: "error"
+              });
+            }
+          });
+      }
+    });
+  }
+</script>
+
 <footer class="ftco-footer ftco-section">
     <div class="container">
       <div class="row mb-5">
@@ -171,7 +357,7 @@
             <h2 class="ftco-heading-2">Links</h2>
             <ul class="list-unstyled">
               <li><a href="/user"><span class="icon-long-arrow-right mr-2"></span>Users</a></li>
-              <li><a href="/upcontact"><span class="icon-long-arrow-right mr-2"></span>Up Gallery</a></li>
+              <li><a href="/upgallery"><span class="icon-long-arrow-right mr-2"></span>Up Gallery</a></li>
               <li><a href="/upmerchandise"><span class="icon-long-arrow-right mr-2"></span>Up Merchandise</a></li>
             </ul>
           </div>
@@ -218,6 +404,7 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="../static/assets/js/google-map.js"></script>
   <script src="../static/assets/js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   </body>
 </html>
