--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -80,7 +80,7 @@
                 </a>
               </div>
               <div class="text px-4">
-                <h3><a href="#">Gathering</a></h3>
+                <h3><a href="#">Nonton Konser</a></h3>
                 <span>FJKT</span>
               </div>
             </div>
