--- a/templates/index.html
+++ b/templates/index.html
@@ -146,7 +146,7 @@
 					error: function(xhr, status, error) {
 					  Swal.fire(
 						'Gagal!',
-						'Pendaftaran Anda tidak dapat diproses.',
+						xhr.responseJSON.message,
 						'error'
 					  );
 					}
@@ -156,7 +156,7 @@
 			});
 		  });
 		  
-// sign in
+		// sign in
 		  document.addEventListener("DOMContentLoaded", function () {
 			document.getElementById('signInForm').addEventListener('submit', function(event) {
 				event.preventDefault();
