--- a/templates/index.html
+++ b/templates/index.html
@@ -28,12 +28,6 @@
 	<script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
 
-	<script>
-    {% if error_message %}
-        alert("{{ error_message }}");
-    {% endif %}
-</script>
-
 </head>
 
 <body>
@@ -137,7 +131,7 @@
 					success: function(response) {
 					  Swal.fire(
 						'Berhasil!',
-						'Pendaftaran Anda telah berhasil.',
+						'Registrasi berhasil! Silakan login.',
 						'success'
 					  ).then(() => {
 						window.location.href = '/'; 
