--- a/templates/header.html
+++ b/templates/header.html
@@ -74,7 +74,7 @@
                 <li class="nav-item">
                     <a class="nav-link" id="user-account" href="#">
                         {% if session['profile_pic_real'] != 'profile_placeholder.png' %}
-                        <img src="{{ url_for('static', filename='assets/img/profile_pics/' ~ session['profile_pic_real']) }}" alt="Profile Picture" style="margin-left: -5px; width: 30px; height: 30px; border-radius: 50%;">
+                        <img src="{{ url_for('static', filename='assets/img/profile_pics/' ~ session['profile_pic_real']) }}" alt="Profile Picture" id="user-pic" style="margin-left: -5px; width: 30px; height: 30px; border-radius: 50%;"><span class="login-text"> Logout</span>
                         {% else %}
                         <i class="fas fa-user"></i><span class="login-text">Logout</span>
                         {% endif %}
