--- a/templates/index.html
+++ b/templates/index.html
@@ -185,7 +185,7 @@
 		
     </script>
 
-	<section class="hero-wrap js-fullheight" style="background-image: url('../static/assets/img/bg_4.png');"
+	<section class="hero-wrap js-fullheight" style="background-image: url('../static/assets/img/bg_4.jpg');"
 		data-section="home">
 		<div class="overlay"></div>
 		<div class="container">
